Hamburger icon fixed for website on smaller devices
CSS fix for nav icon and parallax container is set to max-height

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -225,6 +225,10 @@ input, textarea {
     border-bottom: 1px solid #fff;
 }
 
+nav a.button-collapse {
+    left: -25px;
+}
+
 .card-avatar .waves-effect {
     text-align: center;
     margin-top: 20px;
@@ -253,7 +257,7 @@ input, textarea {
 }
 
 .parallax-container {
-    height: 400px;
+    max-height: 400px;
 }
 
 footer.page-footer {
